"child of" constraint "set inverse" not working #63598

Closed
opened 2019-04-14 17:04:45 +02:00 by Klaus · 7 comments

System Information

Operating system: Windows 10
Graphics card: GTX Titan X

Blender Version

Broken: blender-2.80-14884cda1ff5-win64 (14.04.2019)
Worked: 2.79b

Short description of error

When adding "child of" constraint (same for object constraint and bone constraint) the owner jumps to its new position relative to the target position as expected. When pressing "set inverse", nothing happens, the owner does not jump back to its original position.

Exact steps for others to reproduce the error

  • open new document
  • move default cube away from the center
  • duplicate default cube and move to another position
  • add "child of" constraint to second cube -> jumps to new position
  • click "set inverse" on child constraint -> in 2.79b the cube jumps back to its original position, in 2.8 nothing happens
**System Information** Operating system: Windows 10 Graphics card: GTX Titan X **Blender Version** Broken: blender-2.80-14884cda1ff5-win64 (14.04.2019) Worked: 2.79b **Short description of error** When adding "child of" constraint (same for object constraint and bone constraint) the owner jumps to its new position relative to the target position as expected. When pressing "set inverse", nothing happens, the owner does not jump back to its original position. **Exact steps for others to reproduce the error** - open new document - move default cube away from the center - duplicate default cube and move to another position - add "child of" constraint to second cube -> jumps to new position - click "set inverse" on child constraint -> in 2.79b the cube jumps back to its original position, in 2.8 nothing happens

#63613 was marked as duplicate of this issue

#63613 was marked as duplicate of this issue
Author

Added subscriber: @Klaus-4

Added subscriber: @Klaus-4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-04-15 11:00:58 +02:00
Member

Confirmed, checking [looks like it is actually doing it, but it is missing a refresh...]

Confirmed, checking [looks like it is actually doing it, but it is missing a refresh...]

This issue was referenced by bcefceb200

This issue was referenced by bcefceb200585c97afc975485b92ceb2e5a92a72
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @AntoineRol

Added subscriber: @AntoineRol
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63598
No description provided.